eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
        - name: simple-bank-api
          image: 186519364599.dkr.ecr.us-west-2.amazonaws.com/simplebank:6d15e6343dae48551641f433788c35215732fb03
          ports:
            - containerPort: 8080
